--- a/_site.yml
+++ b/_site.yml
@@ -9,7 +9,14 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - icon: fa fa-twitter
+      href: https://twitter.com/philmassicotte
+    - icon: fa fa-github
+      href: https://github.com/PMassicotte
+    - icon: fa fa-rss
+      href: index.xml
 output: distill::distill_article
 theme: theme.css
 exclude: ["*.txt", "*.csv"]
 toc: true
+base_url: https://pmassicotte.github.io/advent_of_code/
