--- a/_site.yml
+++ b/_site.yml
@@ -8,8 +8,9 @@ navbar:
     - text: "Home"
       href: index.html
     - text: "2020"
-      href: 2020.html
+      href: aoc2020.html
     - text: "2021"
+      href: aoc2021.html
     - text: "About"
       href: about.html
     - icon: fa fa-twitter
